--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -16,6 +16,16 @@
       <div class="column is-full">
         
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1818429213&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="Konigi" target="_blank" style="color: #cccccc; text-decoration: none;">Konigi</a> · <a href="https://soundcloud.com/konigimusic/break-it-down" title="Break It Down - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Break It Down - FREE DL</a></div>
+      <p class="is-size-6">
+      <a href="https://open.spotify.com/album/1LRriusUvAUrN0zWY0FtzH">Spotify</a>  &middot;
+      <a href="https://konigi.bandcamp.com/track/break-it-down">Bandcamp</a> &middot;
+      <a href="https://music.apple.com/us/album/break-it-down-single/1745963679">Apple Music</a> &middot;
+      <a href="https://music.youtube.com/watch?v=nQy5I-fGMBs&si=GTd8ZsErvXP7w8xF">YouTube Music</a> &middot;
+      <a href="https://amazon.com/music/player/tracks/B0D3THJCBG?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_UMM83ZsT5IjewY3d0uafYjN4o">Amazon Music</a>  &middot;
+      <a href="">Deezer</a> &middot;
+      <a href="https://pandora.app.link/9BiwYiWqyJb">Pandora</a> &middot;
+      also on Instagram, Tik Tok &amp; Tidal
+      </p>
       
       <hr>
       
@@ -23,7 +33,7 @@
       <p class="is-size-6">
       <a href="https://open.spotify.com/track/1N7V1fRgq2DOO5DCa7UKrj?si=62727832591d4584">Spotify</a>  &middot;
       <a href="https://konigi.bandcamp.com/track/onidiro">Bandcamp</a> &middot;
-      <a href="https://music.apple.com/us/album/onidiro-single/1688313623">iTunes</a> &middot;
+      <a href="https://music.apple.com/us/album/onidiro-single/1688313623">Apple Music</a> &middot;
       <a href="https://music.youtube.com/playlist?list=OLAK5uy_kyye1-L9yXSRx73HcRyuu67Hwu611g4nI&feature=share">YouTube</a> &middot;
       <a href="https://amazon.com/music/player/albums/B0C5HH9PV1">Amazon Music</a>  &middot;
       <a href="https://www.deezer.com/us/album/442549357">Deezer</a> &middot;
